# workspace-migration

./: .gitignore  NOTICE.md  README.md  config.example.yaml  config.yaml  databricks.yml  pyproject.toml
.github/workflows/: ci.yml  integration.yml
dashboards/: migration_dashboard.lvdash.json
docs/: idempotency_audit.md  peer-review-diagrams.html  peer-review-diagrams.md  stateful_services_phase.md  user_guide.md
docs/reference/: dlt_pipeline_migration.md  external_hive_metastore.md  idempotency_audit.md  model_serving_and_apps_migration.md  retry_resumability.md  stateful_services_phase.md  workflow_split_design.md
resources/: dashboard.yml  migrate_workflow.yml  negative_paths_integration_test_workflow.yml  uc_integration_test_workflow.yml
resources/integration_tests/: governance_integration_test_workflow.yml  hive_integration_test_workflow.yml  lfc_cdc_integration_test_workflow.yml  lfc_integration_test_workflow.yml  lfc_salesforce_integration_test_workflow.yml  negative_paths_integration_test_workflow.yml  online_tables_integration_test_workflow.yml  uc_integration_test_workflow.yml  vector_search_integration_test_workflow.yml
resources/production/: discovery_workflow.yml  migrate_governance_workflow.yml  migrate_hive_workflow.yml  migrate_lfc_workflow.yml  migrate_online_tables_workflow.yml  migrate_uc_workflow.yml  migrate_vector_search_workflow.yml  pre_check_workflow.yml
src/common/: catalog_utils.py  config.py  policy_affected_tables.py  sql_utils.py  stateful_utils.py  tracking.py  validation.py
src/discovery/: discovery.py
src/migrate/: batching.py  cleanup_staging.py  clone_lib.py  column_masks_worker.py  comments_worker.py  rls_cm.py  (+33 more)
tests/: conftest.py
(+119 files in other folders)
